--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,8 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:src="@drawable/kotlin_logo"/>
 
     <FrameLayout
         android:id="@+id/container"
